# agent-cad

./: .gitignore  .mcp.json  README.md  dev_server.py  pyproject.toml  run.py
.claude/agents/: cad-engineer.md
.claude/skills/handoff-to-cad-ui/: SKILL.md
.claude/skills/printer-snapshot/: SKILL.md
.claude/skills/render-snapshot/: SKILL.md
backend/app/: api.py  browser_session.py  events.py  main.py  permissions.py  settings.py
backend/app/agent/: runner.py  standalone_server.py  tools.py
backend/app/cad/: _3mf_loader.py  __init__.py  _gltf_loader.py  _import_loader.py  _import_worker.py  _scene_worker.py  _script_worker.py  _sketch_loader.py  _sketch_worker.py  _snapshot_worker.py  project.py  script_runner.py  sketchfab.py  snapshot.py  tessellate.py
backend/app/printing/: __init__.py  camera.py  presets.py  printers.py  slicers.py  state.py
backend/scripts/: mcp_server.py  printer_snapshot.py  render_snapshot.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  BrowserPanel.tsx  ChatPanel.tsx  Dialog.tsx  DrawingDialog.tsx  ImportBrowser.tsx  Markdown.tsx  NewProjectDialog.tsx  ObjectBrowser.tsx  OpenProjectDialog.tsx  PrintPane.tsx  RequirementsDialog.tsx  RightSidebar.tsx  SettingsDialog.tsx  SketchBrowser.tsx  TabBar.tsx  Timeline.tsx  TweaksPanel.tsx  ViewerPane.tsx  Welcome.tsx
frontend/src/lib/: browser.ts  chat.ts  contextMenu.tsx  doc.ts  print.ts  pywebview.ts  tabs.ts  ui.ts  units.ts  viewer.ts
