[project]
name = "agent-cad"
version = "0.0.1"
description = "LLM-driven parametric CAD desktop app"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pywebview>=5.3",
    "cadquery>=2.5",
    "claude-agent-sdk>=0.1",
    "pillow>=10.0",
    "trimesh>=4.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "websockets>=14",
    # paho-mqtt is the protocol the Bambu printer's LAN-mode "start
    # print" command rides on. Tiny, BSD-licensed, no transitive deps.
    "paho-mqtt>=2.1",
    # opencv-python-headless ships its own bundled FFmpeg — used by
    # backend/scripts/printer_snapshot.py to grab a single frame from
    # the X1C's RTSPS camera stream. Headless variant skips the GUI
    # bindings (smaller install, no Qt/Cocoa pull-in).
    "opencv-python-headless>=4.10",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.10",
    "ruff>=0.6",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
